deployment/tempconverter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempconverter
  namespace: tp-ns
  labels:
    app: tempconverter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tempconverter
  template:
    metadata:
      labels:
        app: tempconverter
    spec:
      containers:
        - name: tempconverter
          image: mislavperic/tempconverter:latest
          ports:
            - name: web
              containerPort: 5000
