deployment/tempconverter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempconverter
  namespace: tp-ns
  labels:
    app: tempconverter
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: tempconverter
