deployment/tempconverter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempconverte-ingress
  namespace: tp-ns
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempconverte
                port:
                  name: web
